trunk/templates/default/main/style.css
/**
 * WoWRoster.net WoWRoster
 *
 * Main CSS file
 *
 * @copyright  2002-2012 WoWRoster.net
 * @license    http://www.gnu.org/licenses/gpl.html   Licensed under the GNU General Public License v3.
 * @version    SVN: $Id$
 * @link       http://www.wowroster.net
 */

.whos-online {

}
.whos-online .left {

}
.whos-online .right {
  float: right;
  margin-right: 10px;
}
.online-users {
  font-style: italic;
  font-size: 11px;
  margin-left: 10px;
  color: #666666;
}
.online-bots {
  font-style: italic;
  font-size: 11px;
  margin-left: 10px;
  color: #999999;
}

#container {
  position:inherit;
  vertical-align:middle;
}
#img2 {
  position: absolute;
  left: -8px;
  top: 5px;
  background: url(../images/mask/menu_40x40_mask.png) no-repeat left top;
}
#main.tier-1-a {
  margin: 0;
  width:100%;
}

#main div.menu-login {
  position: relative;
  right: auto;
  bottom: auto;
}
#left {
  position: relative;
  float: left;
  width: 658px;
}

#right {
  width: 255px;
  margin-left: 660px;
  position: relative;
}

#homepage .name {
  font: bold normal 18px Georgia, "Times New Roman", Times, serif;
  text-transform: none;
  position: relative;
  text-shadow:1px 2px 0 #000000;
  text-align:center;

}
#homepage .name small {
  font-size: 12px;
  text-shadow:1px 2px 0 #000000;
}
#homepage .guild {
  font: bold normal 12px Georgia, "Times New Roman", Times, serif;
  text-transform: none;
  position: relative;
  text-shadow:1px 2px 0 #000000;
}
#homepage .info {
  font: bold normal 9px Verdana, Arial, Helvetica, sans-serif;
  text-transform: uppercase;
  position: relative;
  text-shadow:1px 2px 0 #000000;
}

.events {
  z-index: 600;
  left: 10px;
  position: absolute;
  top: 10px;
  display: block;
}

td.mybackground{
  border: #e4cda4 1px solid;
  background-image: url(images/right-bg.png); /* forward slash for the path */
  width: 290px; /* use you own image size; */
  /*height: 125px; /* use you own image size; */
  background-repeat: repeat-y;
  background-position: left top;
  vertical-align: top;
}

.icon { height: 22px; width: 22px; float: left; margin: 0 5px; position: relative; }
.icon img { position: absolute; left:-1px; top:-1px; clip: rect(2px 22px 22px 2px); height: 23px; width: 23px; }
.icon .mask { background: url(../images/mask/icon_mask.png) no-repeat left top; height: 22px; width: 22px; position: absolute; left: 0; top: 0; }
#homepage {
  z-index: 9999999;
  background: url(../images/shadow.png) repeat-y;
}
/*
#slideshow {
  position: relative; width: 640px; height: 300px; overflow: hidden;
  background: url(images/featured_bg.jpg);
}
#slideshow .container {
  z-index: 20; position: relative; width: 640px; height: 300px;
}
#slideshow .mask {
  z-index: 250; position: relative; width: 640px; height: 300px; top: 0px; cursor: pointer; left: 0px;
  background: url(images/slideshow-mask.png) no-repeat 0px 0px;
  width: 640px;
}
/*
#slideshow .caption {
  color: #0066ff;
  z-index: 35; position: absolute; width: 580px; bottom: 30px; left: 30px
}
#slideshow .caption h3 {
  color: #fff; font-size: 28px; font-weight: normal
}
#slideshow .caption h3 a {
  color: #fff8d6
}
#slideshow .caption h3 a:hover {
  color: #fff
}
#slideshow .paging {
  z-index: 35; position: absolute; width: 15px; top: 15px; right: 15px
}
#slideshow .paging a {
  background-color: #fff; display: block; margin-bottom: 5px; height: 10px; opacity: .5; -moz-border-radius: 3px; border-radius: 3px
}
#slideshow .paging a:hover {
  background: #0068ff;
  border: #a16c29 1px solid;
  opacity: 1
}
#slideshow .paging a.current {
  background: #8000ff;
  border: #a16c29 1px solid;
  color: blue;
  opacity: 1
}
#slideshow .preview {
  z-index: 35; position: absolute; text-align: center; padding-bottom: 5px; padding-left: 5px; width: 100px; padding-right: 5px; display: none; background: #fff; color: #000; top: 15px; right: 35px; padding-top: 5px; -moz-border-radius: 5px; border-radius: 5px
}
#slideshow .preview span {
  display: block
}
#slideshow .slide {
  z-index: 15; position: absolute; width: 640px; background-repeat: no-repeat; background-position: 0px 0px; height: 300px; top: 0px; left: 0px
}
#slideshow .slide .click-area {
  z-index: 20; position: absolute; width: 640px; bottom: 0px; height: 300px; left: 0px
}
#slideshow .slide .click-area embed {
  z-index: 25
}
*/
#homepage {
  padding-bottom: 0px; padding-left: 0px; padding-right: 0px; padding-top: 0px;
}
#news-updates {
  padding-bottom: 40px;
  /*padding-left: 15px; padding-right: 15px;*/
  /*background: url(images/featured_bg.jpg) #23120b repeat 0px 100%*/
}
#news-updates h3 {
  padding-left: 3px
}
#news-updates .by-line {
  padding-left: 3px;
  color: #8000ff;
  font: bold normal 10px Verdana, Arial, Helvetica, sans-serif;
}

#news-updates .article-left {
padding-top: 8px;
  width: 156px; display: block; height: 130px;overflow:hidden;
}
#news-updates .article-left img {
  width: 156px; display: block; height: 130px;overflow:hidden;
}
#news-updates .article-left {
  -moz-box-shadow: 0 0 20px -4px #000;
  -webkit-box-shadow: 0 0 20px -4px #000;
  box-shadow: 0 0 20px -4px #000
}
#news-updates .article-left a {
  border-bottom: #541f09 1px solid; border-left: #541f09 1px solid; border-top: #541f09 1px solid; border-right: #541f09 1px solid
}
#news-updates .article-left a:hover {
  border-bottom-color: #cd9000; border-top-color: #cd9000; border-right-color: #cd9000; border-left-color: #cd9000
}
#news-updates .article-right {
  width: 400px;
}
#news-updates .article-summary {
  margin: 10px 10px 10px 10px;
  line-height: 1.8em; width: 540px;
  color: #333333;
  font: bold normal 12px Verdana, Arial, Helvetica, sans-serif;
}

.camera_block {
  overflow: auto;
}

